# gtask-cli

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md  configuration.md  setup.md  usage.md
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/content/docs/: index.mdx
site/src/content/docs/getting-started/: setup.md
site/src/content/docs/reference/: usage.md
site/src/styles/: custom.css
src/gtask/: __init__.py  auth.py  cli.py  client.py  config.py  dates.py  store.py  tui.py  tui.tcss  tui_widgets.py  view.py
tests/: test_dates.py  test_tui.py  test_view.py
